
syntax = "proto3";

option csharp_namespace = "Eum.gRPC.Server.Proto.Contact";

package Contact;

// The greeting service definition.
service Contact {
  // Sends a greeting
  rpc GetContactList (ContactRequest) returns (ContactReplay);
}

// The request message containing the user's name.
message ContactRequest {
	uint32 mailId = 1; 
}

// The response message containing the greetings.
message ContactReplay {
  string message = 1;
}
